--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,7 @@
         "stdbool.h": "c",
         "history.h": "c",
         "signal.h": "c",
-        "stdlib.h": "c"
+        "stdlib.h": "c",
+        "minishell.h": "c"
     }
 }
