--- a/libft/Makefile
+++ b/libft/Makefile
@@ -1,30 +1,29 @@
-CC = cc
-CFLAGS = -Wall -Wextra -Werror
-NAME = libft.a
-
+AR = ar rcs
 SRCS =		ft_strlen.c		ft_strdup.c		\
 			ft_strjoin.c	ft_memcpy.c		\
 			ft_substr.c		ft_strncpy.c	\
 			ft_isalpha.c	ft_strcmp.c		\
 			ft_isdigit.c	ft_isalnum.c	\
-			ft_itoa.c						\
+			ft_itoa.c
 
-OBJS = $(SRCS:.c=.o)
+OBJ = ${SRCS:.c=.o}
 
-all: $(NAME)
+NAME = libft.a
 
-$(NAME): $(OBJS)
-	ar rcs $@ $(OBJS)
+CFLAGS = -Wall -Wextra -Werror
+
+all: ${NAME}
+
+${NAME}: ${OBJ}
+	${AR} ${NAME} ${OBJ}
 
 %.o: %.c libft.h
 	$(CC) $(CFLAGS) -c $< -o $@
 
 clean:
-	rm -f $(OBJS)
+	rm -f ${OBJ}
 
-fclean: clean
-	rm -f $(NAME)
-
+fclean : clean 
+	rm -f ${NAME}
+	
 re: fclean all
-
-.PHONY: all clean fclean re bonus
