--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,6 +10,8 @@
         "signal.h": "c",
         "stdlib.h": "c",
         "minishell.h": "c",
-        "header.h": "c"
+        "header.h": "c",
+        "stdio.h": "c",
+        "readline.h": "c"
     }
 }
