--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,9 @@
 {
     "files.associations": {
-        "libft.h": "c"
+        "libft.h": "c",
+        "minishell.h": "c",
+        "limits.h": "c",
+        "token.h": "c",
+        "history.h": "c"
     }
 }
